Fixed gapping for safari and improved responsiveness

--- a/src/pages/styles/Project.scss
+++ b/src/pages/styles/Project.scss
@@ -65,17 +65,18 @@ h2{
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap:10px;
     margin-left: 20px;
     margin-top: 20px;
+
+    a{
+        margin-left:10px;
+    }
 }
 
 .source:hover, .deployment:hover{
     @media only screen and (min-width: 600px) {
-        background-color: #1F2026;
-        box-shadow: 0px 0px 1px 1px #5773ff;
+        background-color: #4b63d8;
         margin-top: 15px;
         margin-bottom: 5px;         
-        color:#ff6b35;
     }
 }
